# yunle_chassis

./: AGENTS.md  README.md  Yunle_CAN_NTD_release.dbc  Yunle_CAN_release.dbc  Yunle_CAN_release.ini
chassis_driver/: CMakeLists.txt  package.xml
chassis_driver/config/: chassis_driver.yaml  driver.yaml  network.yaml
chassis_driver/include/chassis_driver/: can_ethernet_codec.hpp  can_types.hpp  chassis_driver_node.hpp  control_command_bridge.hpp  dbc_protocol.hpp  frame_router.hpp  udp_channel.hpp
chassis_driver/launch/: chassis_driver.launch  chassis_driver.launch.py  keyboard_scu_control.launch  keyboard_scu_control.launch.py
chassis_driver/src/: can_ethernet_codec.cpp  chassis_driver_node.cpp  control_command_bridge.cpp  dbc_protocol.cpp  frame_router.cpp  keyboard_scu_control_node.cpp  main.cpp  udp_channel.cpp
chassis_interfaces/: CMakeLists.txt  package.xml
chassis_interfaces/msg/: BmsRealtimeStatus.msg  BmsStatus.msg  CanFrame.msg  CcuStatus.msg  SasAngleFeedback.msg  ScuChassisCommand.msg  ScuControlCommand.msg  ScuTargetSpeedFeedback.msg  ScuTorqueCommand.msg  VcuChassisDebug.msg  VcuWarningLevel.msg  WheelSpeedFeedback.msg
docs/: codex_project_analysis.md  codex_project_analysis_zh.md  project_shortcomings_analysis.md  repo_analysis.md  ros1_topic_reference.md  ros2_topic_reference.md  scu_control_command_wrapper_2026.md  unit_protocol_debug_update.md  unit_protocol_update.md  云乐线控底盘通信协议使用说明-2026.docx
