<?xml version="1.0"?>
<package format="3">
  <name>chassis_driver</name>
  <version>0.1.0</version>
  <description>Single-node ROS2 Humble chassis CAN-over-Ethernet driver with hardcoded DBC protocol.</description>
  <maintainer email="dev@example.com">Yunle Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>chassis_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
