<?xml version="1.0"?>
<package format="2">
  <name>chassis_interfaces</name>
  <version>0.1.0</version>
  <description>Custom ROS1 interface definitions for Yunle chassis driver.</description>
  <maintainer email="dev@example.com">Yunle Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
